--- a/static/assets/css/feedbacks.css
+++ b/static/assets/css/feedbacks.css
@@ -94,10 +94,17 @@
     font-size: 14px;
 }
 
+.fb-slide-content {
+    display: flex;
+    justify-content: center;
+}
+
 .fb-slide-content p {
+    width: 70%;
     font-family: sans-serif;
     font-size: 17px;
     margin-bottom: 20px;
+    line-height: 1.4;
 }
 
 
