--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -120,6 +120,9 @@
             <!-- Page wrapper  -->
             {% block content %} {% endblock %}
             <!-- End wrapper  -->
+
+
+            <footer></footer>
         </div>
     </div>
 
