--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -63,26 +63,26 @@
                     <div class="header_section position-header">
                         <nav class="d-flex align-items-center justify-content-between">
                             <div class="header-navbar-name">
-                                <h1>Sabuhi</h1>
+                                <h1>Səbuhi</h1>
                             </div>
                             <ul class="d-flex header-navbar-menu">
                                 <li>
-                                    <a href="#home">Home</a>
+                                    <a href="#home">Ev</a>
                                 </li>
                                 <li>
-                                    <a href="#about">About</a>
+                                    <a href="#about">Haqqımda</a>
                                 </li>
                                 <li>
-                                    <a href="#skills">What I do</a>
+                                    <a href="#blog">Blog</a>
                                 </li>
                                 <li>
-                                    <a href="#work">My Work</a>
+                                    <a href="#work">Layihələrim</a>
                                 </li>
                                 <li>
                                     <a href="#feedbacks">Feedbacks</a>
                                 </li>
                                 <li>
-                                    <a href="#contact">Contact</a>
+                                    <a href="#contact">Əlaqə</a>
                                 </li>
                             </ul>
                             <div class="d-flex align-items-center">
@@ -111,17 +111,17 @@
             </header>
             <div class="intro-position-center text-center">
                 <div class="header-content-text">
-                    <h3>Welcome</h3>
+                    <h3>Xoş gəldiniz</h3>
                 </div>
                 <div id="text" class="header-content-repot">
-                    <p>I'm <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+                    <p>Mən <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
                 </div>
                 <div class="header-content-subtitle">
-                    <p>based in Baku,Azerbaijan.</p>
+                    <p>Azərbaycanda, Bakıda yerləşir.</p>
                 </div>
                 <div class="header-content-button">
                     <a href="#contact">
-                        <button type="button" class="btn">Contact Me</button>
+                        <button type="button" class="btn">Mənimlə əlaqə saxlayın</button>
                     </a>
                 </div>
             </div>
@@ -138,34 +138,34 @@
         <div class="about-section pt-7">
             <!-- Headnig Section Start -->
             <div class="header-text position-relative mb-80">
-                <h2 class="text-center">About Me</h2>
-                <p class="position-center text-center">Know Me More</p>
+                <h2 class="text-center">Haqqımda</h2>
+                <p class="position-center text-center">Məni Daha çox tanıyın</p>
             </div>
             <!-- Headnig Section End -->
             <div class="container">
                 <div class="row mt-4">
                     <div class="col-md-8 about-information">
-                        <h1>I'm <span>Sabuhi Gasimov,</span> Web Design</h1>
+                        <h1>Mən <span>Səbuhi Qasımov,</span> Veb Proqramçıyam</h1>
                         <p>{{prof.about}}</p>
                     </div>
                     <div class="col-md-4">
                         <div class="list">
                             <ul>
                                 <li>
-                                    <span>Name:</span> {{prof.profile_name}}
+                                    <span>Ad:</span> {{prof.profile_name}}
                                 </li>
                                 <li>
                                     <span>Email:</span> <a href="https://sabuhiq0@gmail.com" target="_blank">{{prof.profile_email}}</a>
                                 </li>
                                 <li>
-                                    <span>Age:</span> {{prof.profile_age}}
+                                    <span>Yaş:</span> {{prof.profile_age}}
                                 </li>
                                 <li>
                                     <span>From:</span>Lahıc,Ismayıllı,Azərbaycan
                                 </li>
                             </ul>
                             <div class="admin-contact-button">
-                                <button class="send" type="submit">Download CV</button>
+                                <button class="send" type="submit">CV'ni yüklə</button>
                             </div>
                         </div>
                     </div>
@@ -179,8 +179,8 @@
         <div class="section">
             <!-- Headnig Section Start -->
             <div class="header-text position-relative">
-                <h2 class="text-center">My Skills</h2>
-                <p class="position-center text-center">What I do?</p>
+                <h2 class="text-center">Bacarıqlar</h2>
+                <p class="position-center text-center">Mən nə edirəm?</p>
             </div>
             <!-- Headnig Section End -->
             <div class="container">
@@ -208,7 +208,7 @@
             <!-- Headnig Section Start -->
             <div class="header-text position-relative mb-6">
                 <h2 class="text-center">Blog</h2>
-                <p class="position-center text-center">Read</p>
+                <p class="position-center text-center">Oxu</p>
             </div>
             <!-- Headnig Section End -->
 
@@ -237,8 +237,8 @@
             <div class="container">
                 <!-- Headnig Section Start -->
                 <div class="header-text position-relative mb-4">
-                    <h2 class="text-center">Portfolio</h2>
-                    <p class="position-center text-center">My Work</p>
+                    <h2 class="text-center">Layihələrim</h2>
+                    <p class="position-center text-center">Mənim İşim</p>
                 </div>
                 <!-- Headnig Section End -->
                 <div class="row">
@@ -252,7 +252,7 @@
                                     <div class="item-text">
                                         <h1><span>{{project.project_name}}</span></h1>
                                         <div class="developer">
-                                            <p><span class="frontEnd">{{project.project_detail}}</span></p>
+                                            <p>{{project.project_detail}}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -271,7 +271,7 @@
             <!-- Headnig Section Start -->
             <div class="header-text position-relative mb-6">
                 <h2 class="text-center">Feedbacks</h2>
-                <p class="position-center text-center">Client Speak</p>
+                <p class="position-center text-center">Dostlar danışın</p>
             </div>
             <!-- Headnig Section End -->
         </div>
@@ -329,8 +329,8 @@
         <div class="section">
             <!-- Headnig Section Start -->
             <div class="header-text position-relative mb-5">
-                <h2 class="text-center">Contact</h2>
-                <p class="position-center text-center">Get in Touch</p>
+                <h2 class="text-center">Əlaqə</h2>
+                <p class="position-center text-center">Əlaqədə olmaq</p>
             </div>
             <!-- Headnig Section End -->
             <div class="container">
@@ -348,7 +348,7 @@
                             </p>
                         </div>
                         <div class="follow-me mt-20">
-                            <h1 class="mt-4">Follow Me</h1>
+                            <h1 class="mt-4">Məni izləyin</h1>
                             <div class="social-list mt-20">
                                 <span>
                                 <a href="https://github.com/Sabuhi0" class="github">
@@ -368,18 +368,18 @@
                         </div>
                     </div>
                     <div class="col-md-9 col-md-1 admin-contact mt-4">
-                        <h1>Send Us A Note</h1>
+                        <h1>Bizə Qeyd Göndərin</h1>
                         <div class="form">
                             <form action="/admin/contact" method="POST" enctype="multipart/form-data">
                                 <div class="display-flex display-block">
-                                    <input class="input mr-15" name="contact_name" required type="text" placeholder="Name" aria-label="Username">
+                                    <input class="input mr-15" name="contact_name" required type="text" placeholder="Adı" aria-label="Username">
                                     <input class="input" name="contact_email" type="email" placeholder="Email" aria-label="Server">
                                 </div>
                                 <div class="mesaj_input">
-                                    <textarea class="input" type="text" name="contact_message" placeholder="Tell us more about your needs........" rows="4"></textarea>
+                                    <textarea class="input" type="text" name="contact_message" placeholder="Ehtiyaclarınız haqqında bizə ətraflı məlumat verin......." rows="4"></textarea>
                                 </div>
                                 <div class="admin-contact-button text-center ">
-                                    <button class="send " type="submit ">Send Message</button>
+                                    <button class="send " type="submit ">Göndər</button>
                                 </div>
                             </form>
                         </div>
