--- a/static/assets/css/feedbacks.css
+++ b/static/assets/css/feedbacks.css
@@ -1,6 +1,7 @@
 /* Feedbacks Section Start */
 
-@media only screen and (min-width: 800px) {
+
+/* @media only screen and (min-width: 800px) {
     .row-feedbacks {
         display: grid;
         gap: 25px;
@@ -52,7 +53,7 @@
 
 .point span>.fa-star {
     color: var(--color-amber);
-}
+} */
 
 .carousel:hover {
     background: rgba(23, 28, 36);
@@ -84,13 +85,13 @@
 }
 
 .fb-slide-title h1 {
-    font-family: sans-serif;
+    font-family: "ReadexProRegular";
     font-size: 22px;
     margin-bottom: 5px;
 }
 
 .fb-slide-from small {
-    font-family: sans-serif;
+    font-family: "ReadexProLight";
     font-size: 14px;
 }
 
@@ -101,8 +102,8 @@
 
 .fb-slide-content p {
     width: 70%;
-    font-family: sans-serif;
-    font-size: 17px;
+    font-family: "ReadexProSemiBold";
+    font-size: 18px;
     margin-bottom: 20px;
     line-height: 1.4;
 }
