--- a/static/assets/css/intro.css
+++ b/static/assets/css/intro.css
@@ -23,14 +23,14 @@
         display: none;
     }
     .header-content-repot p {
-        font-family: "PoppinsBold", sans-serif;
+        font-family: "ReadexProBold";
         font-size: 64px;
         color: var(--color-white);
         padding-top: 10px;
         overflow: hidden;
     }
     .header-content-text h3 {
-        font-family: "Poppins", sans-serif;
+        font-family: "ReadexProRegular";
         font-size: 32px;
         color: var(--color-white);
         margin-bottom: 20px;
@@ -78,14 +78,14 @@
         animation: blink 1s infinite;
     }
     .header-content-repot p {
-        font-family: "PoppinsBold", sans-serif;
+        font-family: "ReadexProBold";
         font-size: 34px;
         color: var(--color-white);
         padding-top: 10px;
         overflow: hidden;
     }
     .header-content-text h3 {
-        font-family: "Poppins", sans-serif;
+        font-family: "ReadexProRegular";
         font-size: 25px;
         color: var(--color-white);
         margin-bottom: 20px;
@@ -120,7 +120,7 @@
 }
 
 .header-content-subtitle p {
-    font-family: "PoppinsLight", sans-serif;
+    font-family: "ReadexProRegular";
     font-size: 22px;
     color: var(--color-geyser);
     margin-top: 1rem;
@@ -133,7 +133,7 @@
 }
 
 .header-navbar-name h1 {
-    font-family: "PoppinsLight", sans-serif;
+    font-family: "ReadexProRegular";
     font-size: 32px;
     font-weight: 700;
     color: var(--color-white);
@@ -144,7 +144,7 @@
 }
 
 .header-navbar-menu li a {
-    font-family: "PoppinsLight", sans-serif;
+    font-family: "ReadexProLight";
     color: var(--color-white);
     font-size: 16px;
     padding: 1.3rem;
@@ -237,7 +237,7 @@
 }
 
 .btn {
-    font-family: "PoppinsLight", sans-serif;
+    font-family: "ReadexProLight";
     padding: .7rem 2.3rem;
     border-radius: 2rem;
     color: var(--color-mountain-meadow);
