--- a/static/assets/css/work.css
+++ b/static/assets/css/work.css
@@ -41,7 +41,7 @@
 }
 
 .item-text {
-    font-family: "PoppinsLight", sans-serif;
+    /* font-family: "ReadexProRegulart"; */
     color: var(--color-white);
     font-size: 25px;
     position: absolute;
@@ -52,29 +52,19 @@
 }
 
 .item-text h1 span {
-    font-family: "PoppinsBold", sans-serif;
+    font-family: "ReadexProSemiBold";
     color: var(--color-mountain-meadow)
 }
 
 .item-text p {
-    font-family: "PoppinsLight", sans-serif;
+    font-family: "ReadexProRegular";
     font-size: 18px;
     margin-top: 1.3rem;
 }
 
-.developer .frontEnd {
-    font-family: "PoppinsBold", sans-serif;
-    color: var(--color-blaze-orange);
-}
-
-.developer .bootstrap {
-    font-family: "PoppinsBold", sans-serif;
-    color: var(--color-studio);
-}
-
-.developer .backEnd {
-    font-family: "PoppinsBold", sans-serif;
-    color: var(--color-gold);
+.developer {
+    font-family: "ReadexProRegular";
+    color: var(--color-white);
 }
 
 
