--- a/templates/admin/blog.html
+++ b/templates/admin/blog.html
@@ -25,30 +25,32 @@
                 <span></span> <button type="submit">Submit</button>
             </div>
         </form>
-        <table class="table rounded text-light">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Link</th>
-                    <th scope="col">Date</th>
-                    <th scope="col">Update</th>
-                    <th scope="col">Delete</th>
-                </tr>
-            </thead>
-            <tbody>
-                {%for blog in blogs%}
-                <tr>
-                    <td>{{blog.id}}</td>
-                    <td>{{blog.blog_name}}</td>
-                    <td>{{blog.blog_url}}</td>
-                    <td>{{blog.blog_dateTime}}</td>
-                    <td><a href="/blogEdit/{{blog.id}}"><i class="far fa-edit" style="color: #20C997;"></i></a></td>
-                    <td><a href="/blogDelete/{{blog.id}}"><i class="far fa-trash-alt" style="color: #20C997;"></i></a></td>
-                </tr>
-                {%endfor%}
-            </tbody>
-        </table>
+        <div class="table" style="margin-bottom: 50px;">
+            <table class="table rounded text-light">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Link</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Update</th>
+                        <th scope="col">Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {%for blog in blogs%}
+                    <tr>
+                        <td>{{blog.id}}</td>
+                        <td>{{blog.blog_name}}</td>
+                        <td>{{blog.blog_url}}</td>
+                        <td>{{blog.blog_dateTime}}</td>
+                        <td><a href="/blogEdit/{{blog.id}}"><i class="far fa-edit" style="color: #20C997;"></i></a></td>
+                        <td><a href="/blogDelete/{{blog.id}}"><i class="far fa-trash-alt" style="color: #20C997;"></i></a></td>
+                    </tr>
+                    {%endfor%}
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 {% endblock %}
