--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -16,7 +16,6 @@
     <!--=============== FONTS ===============-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
-<!-- This is test comment -->
 
 <body>
     <div class="loader disappear">
@@ -24,7 +23,7 @@
     </div>
     <div class="container-full">
         <div class="d-flex">
-            <!-- Start idebar section -->
+            <!-- Sidebar Section Start  -->
             <aside class="sidebar">
                 <div class="header-item">
                     <a class="d-flex align-items-center justify-content-between pl-24" href="#">
@@ -115,7 +114,7 @@
                     </li>
                 </footer>
             </aside>
-            <!-- End sidebar section -->
+            <!-- Sidebar Section End -->
 
             <!-- Page wrapper  -->
             {% block content %} {% endblock %}
