--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -121,7 +121,7 @@
                 </div>
                 <div class="header-content-button">
                     <a href="#contact">
-                        <button type="button" class="btn">Mənimlə əlaqə saxlayın</button>
+                        <button type="button" class="btn">Əlaqə üçün</button>
                     </a>
                 </div>
             </div>
@@ -271,7 +271,7 @@
             <!-- Headnig Section Start -->
             <div class="header-text position-relative mb-6">
                 <h2 class="text-center">Feedbacks</h2>
-                <p class="position-center text-center">Dostlar danışın</p>
+                <p class="position-center text-center">Rəylər</p>
             </div>
             <!-- Headnig Section End -->
         </div>
