--- a/static/admin/assets/css/sidebar.css
+++ b/static/admin/assets/css/sidebar.css
@@ -7,6 +7,7 @@
     background: rgb(36, 59, 85, 0.8);
     padding-top: 41px;
     z-index: 999;
+    transition: .4s all ease;
 }
 
 .sidebar:hover {
