Update contact section

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -330,7 +330,7 @@
             <!-- Headnig Section Start -->
             <div class="header-text position-relative mb-5">
                 <h2 class="text-center">Əlaqə</h2>
-                <p class="position-center text-center">Əlaqədə olmaq</p>
+                <p class="position-center text-center">Əlaqə üçün</p>
             </div>
             <!-- Headnig Section End -->
             <div class="container">
