--- a/templates/admin/feedbacks.html
+++ b/templates/admin/feedbacks.html
@@ -13,7 +13,7 @@
             </div>
             <div class="form-group mt-3">
                 <label class="text-light">FeedBack</label>
-                <input type="text" name="feedback_detail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+                <textarea name="feedback_detail" class="form-control" rows="4"></textarea>
             </div>
             <div class="form-group mt-3">
                 <input type="file" name="feedback_imgProfil" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
