--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -292,7 +292,7 @@
                         <small>Baku</small>
                     </div>
                     <div class="fb-slide-content text-center">
-                        <p>Bu uşağın vunderkind olduuğuna inanıram</p>
+                        <p>Sabuhi Azərbaycanda proqramlaşdırmanın talehini dəyişəcək potensiyalı olan həm kod həvəsinə, həm götürmə qabiliyətinə, həm istedadına malik pure cavan kadrdır. Mən çox inanıram ki, bu oğlanın önü çox açığdı düzgün istiqamət verilsə.</p>
                     </div>
                 </div>
                 {%for feedback in feedbacks%}
