Add heading separator line

--- a/static/assets/css/common.css
+++ b/static/assets/css/common.css
@@ -223,6 +223,16 @@ html {
 }
 
 
+/* Heading-Separator-Line */
+
+.heading-separator-line {
+    width: 80px;
+    margin-top: 10px;
+    border-color: var(--color-mountain-meadow) !important;
+    border-width: 3px!important;
+}
+
+
 /* Circle to-top button section */
 
 .scroll-button button {
