--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -136,12 +136,15 @@
     <section id="about">
         <!-- About Section Start -->
         <div class="about-section pt-7">
-            <!-- Headnig Section Start -->
+            <!-- Heading Section Start -->
             <div class="header-text position-relative mb-80">
                 <h2 class="text-center">Haqqımda</h2>
-                <p class="position-center text-center">Məni Daha çox tanıyın</p>
+                <p class="position-center text-center">
+                    Məni Daha çox tanıyın
+                    <span class="heading-separator-line border-bottom d-block mx-auto"></span>
+                </p>
             </div>
-            <!-- Headnig Section End -->
+            <!-- Heading Section End -->
             <div class="container">
                 <div class="row mt-4">
                     <div class="col-md-8 about-information">
@@ -177,12 +180,15 @@
     <section id="skills">
         <!-- What I do Section Start -->
         <div class="section">
-            <!-- Headnig Section Start -->
+            <!-- Heading Section Start -->
             <div class="header-text position-relative">
                 <h2 class="text-center">Bacarıqlar</h2>
-                <p class="position-center text-center">Mən nə edirəm?</p>
+                <p class="position-center text-center">
+                    Mən nə edirəm?
+                    <span class="heading-separator-line border-bottom d-block mx-auto"></span>
+                </p>
             </div>
-            <!-- Headnig Section End -->
+            <!-- Heading Section End -->
             <div class="container">
                 <!-- My Skills Section Start -->
                 <div class="row mt-5">
@@ -205,12 +211,15 @@
     </section>
     <section id="blog">
         <div class="blog-section pt-7">
-            <!-- Headnig Section Start -->
+            <!-- Heading Section Start -->
             <div class="header-text position-relative mb-6">
                 <h2 class="text-center">Blog</h2>
-                <p class="position-center text-center">Oxu</p>
+                <p class="position-center text-center">
+                    Oxu
+                    <span class="heading-separator-line border-bottom d-block mx-auto"></span>
+                </p>
             </div>
-            <!-- Headnig Section End -->
+            <!-- Heading Section End -->
 
             <!-- Blog Section Start -->
             <div class="container">
@@ -235,12 +244,15 @@
         <!-- My Work Section Start -->
         <div class="section">
             <div class="container">
-                <!-- Headnig Section Start -->
+                <!-- Heading Section Start -->
                 <div class="header-text position-relative mb-4">
                     <h2 class="text-center">Layihələrim</h2>
-                    <p class="position-center text-center">Mənim İşim</p>
+                    <p class="position-center text-center">
+                        Mənim İşim
+                        <span class="heading-separator-line border-bottom d-block mx-auto"></span>
+                    </p>
                 </div>
-                <!-- Headnig Section End -->
+                <!-- Heading Section End -->
                 <div class="row">
                     {% for project in projects%}
 
@@ -268,12 +280,15 @@
     <section id="feedbacks">
         <!-- Feedbacks Section Start -->
         <div class="container pt-7">
-            <!-- Headnig Section Start -->
+            <!-- Heading Section Start -->
             <div class="header-text position-relative mb-6">
                 <h2 class="text-center">Feedbacks</h2>
-                <p class="position-center text-center">Rəylər</p>
+                <p class="position-center text-center">
+                    Rəylər
+                    <span class="heading-separator-line border-bottom d-block mx-auto"></span>
+                </p>
             </div>
-            <!-- Headnig Section End -->
+            <!-- Heading Section End -->
         </div>
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <!-- <div class="carousel-indicators">
@@ -327,12 +342,15 @@
     <section id="contact">
         <!-- Contact Section Start -->
         <div class="section">
-            <!-- Headnig Section Start -->
+            <!-- Heading Section Start -->
             <div class="header-text position-relative mb-5">
                 <h2 class="text-center">Əlaqə</h2>
-                <p class="position-center text-center">Əlaqə üçün</p>
+                <p class="position-center text-center">
+                    Əlaqə üçün
+                    <span class="heading-separator-line border-bottom d-block mx-auto"></span>
+                </p>
             </div>
-            <!-- Headnig Section End -->
+            <!-- Heading Section End -->
             <div class="container">
                 <div class="row">
                     <div class="col-md-3 col-md-1 footer-sidebar mt-4">
