Change table section

--- a/templates/admin/blog.html
+++ b/templates/admin/blog.html
@@ -25,7 +25,7 @@
                 <span></span> <button type="submit">Submit</button>
             </div>
         </form>
-        <div class="table" style="margin-bottom: 50px;">
+        <div class="pb-60">
             <table class="table rounded text-light">
                 <thead>
                     <tr>
