--- a/static/admin/assets/css/common.css
+++ b/static/admin/assets/css/common.css
@@ -278,3 +278,7 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
 .pt-35 {
     padding-top: 35px;
 }
+
+.pb-60 {
+    padding-bottom: 60px;
+}
