--- a/templates/admin/feedbacks.html
+++ b/templates/admin/feedbacks.html
@@ -25,30 +25,32 @@
                 <span></span> <button type="submit">Submit</button>
             </div>
         </form>
-        <table class="table rounded text-light">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Full Name</th>
-                    <th scope="col">Form</th>
-                    <th scope="col">FeedBack</th>
-                    <th scope="col">Update</th>
-                    <th scope="col">Delete</th>
-                </tr>
-            </thead>
-            <tbody>
-                {%for feedback in feedbacks%}
-                <tr>
-                    <td>{{feedback.id}}</td>
-                    <td>{{feedback.feedback_name}}</td>
-                    <td>{{feedback.feedback_from}}</td>
-                    <td>{{feedback.feedback_detail}}</td>
-                    <td><a href="/feedbackEdit/{{feedback.id}}"><i class="far fa-edit" style="color: #20C997;"></i></a></td>
-                    <td><a href="/feedbackDelete/{{feedback.id}}"><i class="far fa-trash-alt" style="color: #20C997;"></i></a></td>
-                </tr>
-                {%endfor%}
-            </tbody>
-        </table>
+        <div class="pl-60">
+            <table class="table rounded text-light">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Full Name</th>
+                        <th scope="col">Form</th>
+                        <th scope="col">FeedBack</th>
+                        <th scope="col">Update</th>
+                        <th scope="col">Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {%for feedback in feedbacks%}
+                    <tr>
+                        <td>{{feedback.id}}</td>
+                        <td>{{feedback.feedback_name}}</td>
+                        <td>{{feedback.feedback_from}}</td>
+                        <td>{{feedback.feedback_detail}}</td>
+                        <td><a href="/feedbackEdit/{{feedback.id}}"><i class="far fa-edit" style="color: #20C997;"></i></a></td>
+                        <td><a href="/feedbackDelete/{{feedback.id}}"><i class="far fa-trash-alt" style="color: #20C997;"></i></a></td>
+                    </tr>
+                    {%endfor%}
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 {% endblock %}
