--- a/templates/admin/project.html
+++ b/templates/admin/project.html
@@ -25,30 +25,32 @@
                 <span></span> <button type="submit">Submit</button>
             </div>
         </form>
-        <table class="table rounded text-light">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Project Name</th>
-                    <th scope="col">Project Detail</th>
-                    <th scope="col">Project Url</th>
-                    <th scope="col">Update</th>
-                    <th scope="col">Delete</th>
-                </tr>
-            </thead>
-            <tbody>
-                {%for project in projects%}
-                <tr>
-                    <td>{{project.id}}</td>
-                    <td>{{project.project_name}}</td>
-                    <td>{{project.project_detail}}</td>
-                    <td>{{project.project_url}}</td>
-                    <td><a href="/projectEdit/{{project.id}}"><i class="far fa-edit" style="color: #20C997;"></i></a></td>
-                    <td><a href="/projectDelete/{{project.id}}"><i class="far fa-trash-alt" style="color: #20C997;"></i></a></td>
-                </tr>
-                {%endfor%}
-            </tbody>
-        </table>
+        <div class="pb-60">
+            <table class="table rounded text-light">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Project Name</th>
+                        <th scope="col">Project Detail</th>
+                        <th scope="col">Project Url</th>
+                        <th scope="col">Update</th>
+                        <th scope="col">Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {%for project in projects%}
+                    <tr>
+                        <td>{{project.id}}</td>
+                        <td>{{project.project_name}}</td>
+                        <td>{{project.project_detail}}</td>
+                        <td>{{project.project_url}}</td>
+                        <td><a href="/projectEdit/{{project.id}}"><i class="far fa-edit" style="color: #20C997;"></i></a></td>
+                        <td><a href="/projectDelete/{{project.id}}"><i class="far fa-trash-alt" style="color: #20C997;"></i></a></td>
+                    </tr>
+                    {%endfor%}
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 {% endblock %}
