Change navabar menu

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -67,7 +67,7 @@
                             </div>
                             <ul class="d-flex header-navbar-menu">
                                 <li>
-                                    <a href="#home">Ev</a>
+                                    <a href="#home">Ana Səhifə</a>
                                 </li>
                                 <li>
                                     <a href="#about">Haqqımda</a>
