--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -21,12 +21,12 @@
                 <input type="password" name="admin_password" required>
                 <label>Password</label>
             </div>
-            <a href="#">
+            <div class="submit_button">
                 <span></span>
                 <span></span>
                 <span></span>
-                <span></span> <button type="submit">Login</button>
-            </a>
+                <span></span> <button type="submit">Submit</button>
+            </div>
         </form>
     </div>
 </body>
