--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Sabuhi</title>
+    <title>Sabuhi Gasimov</title>
     <!-- Add Icon Link -->
     <link rel="icon" href="https://i.pinimg.com/originals/85/76/30/8576308f3ed156f01bd9a865c05852e0.jpg" type="image/x-icon">
     <!--=============== BOOTSTRAP 5.2.0-beta1 ===============-->
