Update login section

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -54,7 +54,7 @@
             <!-- <video autoplay loop muted>
                 <source src="/static/video/Laptop-1625.mp4" type="video/mp4">
             </video> -->
-            <img width="100%" height="100%" style="object-fit: cover;" src="/static/assets/uploads/desktop.png" alt="desktop">
+            <!-- <img width="100%" height="100%" style="object-fit: cover;" src="/static/assets/uploads/desktop.png" alt="desktop"> -->
         </div>
         <div class="container">
             <!-- Header Section Start -->
