--- a/static/admin/assets/css/login.css
+++ b/static/admin/assets/css/login.css
@@ -9,6 +9,119 @@ body {
     background: linear-gradient(#141e30, #243b55);
 }
 
+.submit_button {
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    color: #20C997;
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: .5s;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    cursor: pointer;
+}
+
+.submit_button button {
+    border: none;
+    background: none;
+    color: #fff;
+    font-size: 18px;
+}
+
+.submit_button:hover {
+    background: #20C997;
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #20C997, 0 0 25px #20C997, 0 0 50px #20C997, 0 0 100px #20C997;
+}
+
+.submit_button span {
+    position: absolute;
+    display: block;
+}
+
+.submit_button span:nth-child(1) {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #20C997);
+    animation: btn-anim1 1s linear infinite;
+}
+
+@keyframes btn-anim1 {
+    0% {
+        left: -100%;
+    }
+    50%,
+    100% {
+        left: 100%;
+    }
+}
+
+.submit_button span:nth-child(2) {
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, #20C997);
+    animation: btn-anim2 1s linear infinite;
+    animation-delay: .25s
+}
+
+@keyframes btn-anim2 {
+    0% {
+        top: -100%;
+    }
+    50%,
+    100% {
+        top: 100%;
+    }
+}
+
+.submit_button span:nth-child(3) {
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, #20C997);
+    animation: btn-anim3 1s linear infinite;
+    animation-delay: .5s
+}
+
+@keyframes btn-anim3 {
+    0% {
+        right: -100%;
+    }
+    50%,
+    100% {
+        right: 100%;
+    }
+}
+
+.submit_button span:nth-child(4) {
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg, transparent, #20C997);
+    animation: btn-anim4 1s linear infinite;
+    animation-delay: .75s
+}
+
+@keyframes btn-anim4 {
+    0% {
+        bottom: -100%;
+    }
+    50%,
+    100% {
+        bottom: 100%;
+    }
+}
+
 .login-box {
     position: absolute;
     top: 50%;
@@ -64,7 +177,8 @@ body {
     font-size: 12px;
 }
 
-.login-box form a {
+
+/* .login-box form a {
     position: relative;
     display: inline-block;
     padding: 10px 20px;
@@ -76,23 +190,26 @@ body {
     transition: .5s;
     margin-top: 40px;
     letter-spacing: 4px
-}
+} */
 
-.login-box form button {
+
+/* .login-box form button {
     border: none;
     background: none;
     color: #fff;
     font-size: 18px;
-}
+} */
 
-.login-box a:hover {
+
+/* .login-box a:hover {
     background: #20C997;
     color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 5px #20C997, 0 0 25px #20C997, 0 0 50px #20C997, 0 0 100px #20C997;
-}
+} */
 
-.login-box a span {
+
+/* .login-box a span {
     position: absolute;
     display: block;
 }
@@ -154,9 +271,10 @@ body {
     100% {
         right: 100%;
     }
-}
+} */
 
-.login-box a span:nth-child(4) {
+
+/* .login-box a span:nth-child(4) {
     bottom: -100%;
     left: 0;
     width: 2px;
@@ -164,9 +282,10 @@ body {
     background: linear-gradient(360deg, transparent, #20C997);
     animation: btn-anim4 1s linear infinite;
     animation-delay: .75s
-}
+} */
 
-@keyframes btn-anim4 {
+
+/* @keyframes btn-anim4 {
     0% {
         bottom: -100%;
     }
@@ -174,4 +293,4 @@ body {
     100% {
         bottom: 100%;
     }
-}
+} */
