--- a/static/assets/css/intro.css
+++ b/static/assets/css/intro.css
@@ -126,10 +126,11 @@
     margin-top: 1rem;
 }
 
-.intro img {
+.intro {
     width: 100%;
     height: 100vh;
-    object-fit: cover;
+    background: url(../uploads/desktop.png);
+    background-attachment: fixed;
 }
 
 .header-navbar-name h1 {
